# pimDNA

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: be41e09b88d9_initial_migration.py
back/: Dockerfile  pyproject.toml
back/alembic/: env.py
back/alembic/versions/: 93f328e6df1b_initial_migration.py  b50e6539cde1_initial_migration.py  be41e09b88d9_initial_migration.py
back/src/: constants.py  logger.py
back/src/api/: __init__.py  endpoints.py  private.py  public.py  utils.py
back/src/database/: __init__.py  models.py
back/src/dependencies/: __init__.py  authentication.py  database.py
front/: .env  Dockerfile  README.MD  package-lock.json  package.json
front/src/: App.tsx  index.tsx
front/src/components/app-icon/: index.tsx
front/src/pages/: login.tsx
front/src/utils/: axios.js
front/src/views/pages/authentication/auth-forms/: AuthLogin.js  AuthRegister.js
front/src/views/pages/authentication/authentication3/: Login3.js  Register3.js
src/: constants.py
src/api/: __init__.py  utils.py
src/database/: __init__.py  models.py
src/dependencies/: __init__.py  authentication.py
